--- a/index.html
+++ b/index.html
@@ -3,10 +3,69 @@
 
 <head>
   <title>un-fathom</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Yrsa:wght@300;400;500;600;700&display=swap');
+
+    :root {
+      --color-background: #F1D4FF;
+      --color-card: #BEA5CC;
+    }
+
+    body,
+    html {
+      margin: 0;
+      padding: 0;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: var(--color-background);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    main {
+      background-color: var(--color-card);
+      background: url("./resources/title-background.svg") center / cover no-repeat var(--color-card);
+      padding: 32px 100px;
+      text-align: center;
+      position: relative;
+      box-shadow: 16px 16px 0px rgba(0, 0, 0, 0.35);
+      transform: translate(-8px, -8px);
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    }
+
+    main:hover {
+      box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.35);
+      transform: translate(0px, 0px);
+    }
+
+    main::after {
+      content: "";
+      position: absolute;
+      inset: 5px;
+      border: 5px solid #FFF;
+      outline: 3px solid #FFF;
+      outline-offset: -11px;
+    }
+
+    .title {
+      font: 300 4rem 'Yrsa', serif;
+      text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    }
+  </style>
 </head>
 
 <body>
-  <h1>Test</h1>
+  <main>
+    <h1 class="title">un-fathom</h1>
+  </main>
 </body>
 
 </html>
