--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       box-shadow: 16px 16px 0px rgba(0, 0, 0, 0.35);
       transform: translate(-8px, -8px);
       transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+      cursor: pointer;
     }
 
     main:hover {
@@ -59,11 +60,29 @@
       font: 300 4rem 'Yrsa', serif;
       text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     }
+
+    @keyframes rotate-and-scale {
+      0% {
+        transform: rotate(0deg) scale(1);
+      }
+
+      50% {
+        transform: rotate(180deg) scale(1.5);
+      }
+
+      100% {
+        transform: rotate(360deg) scale(1);
+      }
+    }
   </style>
+  <script>
+    rotate = () => {
+    }
+  </script>
 </head>
 
 <body>
-  <main>
+  <main onclick="rotate()">
     <h1 class="title">un-fathom</h1>
   </main>
 </body>
