--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <header class="header">
       <div class="header__wrapper">
-        <img src="/resources/psi.svg" alt="Greek psi" class="header__logo" />
+        <a href="#" class="header__logo">
+          <img src="/resources/psi.svg" alt="Greek psi" />
+        </a>
         <nav class="header__nav">
           <a href="#about" class="header__navlink">About</a>
           <a href="#projects" class="header__navlink">Projects</a>
@@ -36,7 +38,7 @@
       <div class="hero__path"></div>
     </section>
 
-    <section class="about">
+    <section id="about" class="about">
       <div class="about__wrapper">
         <div class="section-title">
           <h2 class="section-title__title">About</h2>
@@ -46,7 +48,10 @@
       </div>
     </section>
 
-    <section class="projects">
+    <section id="projects" class="projects">
+      <div class="projects__circle projects__circle-1"></div>
+      <div class="projects__circle projects__circle-2"></div>
+
       <div class="projects__wrapper">
         <div class="section-title">
           <h2 class="section-title__title">Projects</h2>
@@ -55,16 +60,56 @@
         </div>
 
         <div class="projects__cards-wrapper">
-          <div class="projects__card">Card 1</div>
-          <div class="projects__card">Card 2</div>
-          <div class="projects__card">Card 3</div>
+          <a href="#!" class="projects__card">
+            <h3 class="projects__card-title">Project 1</h3>
+            <div class="projects__card-divider"></div>
+            <p class="projects__card-description">Lorem ipsum dolor sit amet</p>
+            <div class="project__card-image-wrapper">
+              <img
+                src="/resources/project-1.jpg"
+                alt="Project 1"
+                class="projects__card-image" />
+            </div>
+          </a>
+          <a href="#!" class="projects__card">
+            <h3 class="projects__card-title">Project 2</h3>
+            <div class="projects__card-divider"></div>
+            <p class="projects__card-description">Lorem ipsum dolor sit amet</p>
+            <div class="project__card-image-wrapper">
+              <img
+                src="/resources/project-2.jpg"
+                alt="Project 2"
+                class="projects__card-image" />
+            </div>
+          </a>
+          <a href="#!" class="projects__card">
+            <h3 class="projects__card-title">Project 3</h3>
+            <div class="projects__card-divider"></div>
+            <p class="projects__card-description">Lorem ipsum dolor sit amet</p>
+            <div class="project__card-image-wrapper">
+              <img
+                src="/resources/project-3.jpg"
+                alt="Project 3"
+                class="projects__card-image" />
+            </div>
+          </a>
         </div>
       </div>
     </section>
 
-    <footer>
-      <span>© Troy Mackenzie-Smee</span>
-      <img src="/resources/github.svg" alt="GitHub logo" />
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__copyright-wrapper">
+          <img src="/resources/psi.svg" alt="Greek psi" class="footer__logo" />
+          <span class="footer__copyright">© Troy Mackenzie-Smee</span>
+        </div>
+        <div class="footer__socials">
+          <img
+            src="/resources/github.svg"
+            alt="GitHub logo"
+            class="footer__github" />
+        </div>
+      </div>
     </footer>
 
     <script>
