add: github link

--- a/index.html
+++ b/index.html
@@ -104,10 +104,15 @@
           <span class="footer__copyright">© Troy Mackenzie-Smee</span>
         </div>
         <div class="footer__socials">
-          <img
-            src="/resources/github.svg"
-            alt="GitHub logo"
-            class="footer__github" />
+          <a
+            href="https://github.com/un-fathom"
+            target="_blank"
+            class="footer__github-anchor">
+            <img
+              src="/resources/github.svg"
+              alt="GitHub logo"
+              class="footer__github" />
+          </a>
         </div>
       </div>
     </footer>
