fix: navbar border appearing on page load

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
 
   <body>
+    <script>
+      document.documentElement.dataset.scroll = 0
+    </script>
     <header class="header">
       <div class="header__wrapper">
         <a href="#" class="header__logo">
@@ -116,7 +119,6 @@
         </div>
       </div>
     </footer>
-
     <script>
       document.addEventListener("scroll", () => {
         document.documentElement.dataset.scroll = window.scrollY
