feat: projects images and descriptions

--- a/index.html
+++ b/index.html
@@ -112,40 +112,36 @@
         </div>
 
         <div class="projects__cards-wrapper">
-          <a href="#!" class="projects__card">
-            <h3 class="projects__card-title">Project 1</h3>
+          <a
+            href="https://github.com/un-fathom/zapp"
+            target="_blank"
+            class="projects__card">
+            <h3 class="projects__card-title">Zapp</h3>
             <div class="projects__card-divider"></div>
-            <p class="projects__card-description">Lorem ipsum dolor sit amet</p>
-            <div class="project__card-image-wrapper">
-              <img
-                src="/resources/project-1.jpg"
-                alt="Project 1"
-                class="projects__card-image" />
-            </div>
+            <p class="projects__card-description">
+              A web app designed to make learning fun. Made during the WDCC x
+              SESA 48-hour Hackathon entry, winning 1st place.
+            </p>
+            <div class="projects__card-image projects__card-image-1"></div>
           </a>
 
           <a href="#!" class="projects__card">
-            <h3 class="projects__card-title">Project 2</h3>
+            <h3 class="projects__card-title">Quick, Draw!</h3>
             <div class="projects__card-divider"></div>
-            <p class="projects__card-description">Lorem ipsum dolor sit amet</p>
-            <div class="project__card-image-wrapper">
-              <img
-                src="/resources/project-2.jpg"
-                alt="Project 2"
-                class="projects__card-image" />
-            </div>
+            <p class="projects__card-description">
+              A drawing game in which a machine learning model guesses your
+              sketch based on a prompt. Made for SOFTENG 206 2022.
+            </p>
+            <div class="projects__card-image projects__card-image-2"></div>
           </a>
 
           <a href="#!" class="projects__card">
-            <h3 class="projects__card-title">Project 3</h3>
+            <h3 class="projects__card-title">Coming soon...</h3>
             <div class="projects__card-divider"></div>
-            <p class="projects__card-description">Lorem ipsum dolor sit amet</p>
-            <div class="project__card-image-wrapper">
-              <img
-                src="/resources/project-3.jpg"
-                alt="Project 3"
-                class="projects__card-image" />
-            </div>
+            <p class="projects__card-description">
+              ?????????????????????????????
+            </p>
+            <div class="projects__card-image projects__card-image-3"></div>
           </a>
         </div>
       </div>
