feat: card text changed

--- a/index.html
+++ b/index.html
@@ -116,32 +116,43 @@
             href="https://github.com/un-fathom/zapp"
             target="_blank"
             class="projects__card">
-            <h3 class="projects__card-title">Zapp</h3>
-            <div class="projects__card-divider"></div>
-            <p class="projects__card-description">
-              A web app designed to make learning fun. Made during the WDCC x
-              SESA 48-hour Hackathon entry, winning 1st place.
-            </p>
-            <div class="projects__card-image projects__card-image-1"></div>
+            <div class="projects__content-wrapper">
+              <h3 class="projects__card-title">Zapp</h3>
+              <div class="projects__card-divider"></div>
+              <p class="projects__card-description">
+                A web app designed to make learning fun. Made during the WDCC x
+                SESA 48-hour Hackathon, winning 1st place.
+              </p>
+              <img
+                src="/resources/zapp.svg"
+                alt="Smiling cloud with lightning bolt"
+                class="projects__card-image" />
+            </div>
           </a>
 
           <a href="#!" class="projects__card">
-            <h3 class="projects__card-title">Quick, Draw!</h3>
-            <div class="projects__card-divider"></div>
-            <p class="projects__card-description">
-              A drawing game in which a machine learning model guesses your
-              sketch based on a prompt. Made for SOFTENG 206 2022.
-            </p>
-            <div class="projects__card-image projects__card-image-2"></div>
+            <div class="projects__content-wrapper">
+              <h3 class="projects__card-title">Quick, Draw!</h3>
+              <div class="projects__card-divider"></div>
+              <p class="projects__card-description">
+                A drawing game in which a machine learning model guesses your
+                sketch based on a prompt. Made for SOFTENG 206 2022.
+              </p>
+              <img
+                src="/resources/quick-draw.svg"
+                alt="Smiling cloud with lightning bolt"
+                class="projects__card-image" />
+            </div>
           </a>
 
           <a href="#!" class="projects__card">
-            <h3 class="projects__card-title">Coming soon...</h3>
-            <div class="projects__card-divider"></div>
-            <p class="projects__card-description">
-              ?????????????????????????????
-            </p>
-            <div class="projects__card-image projects__card-image-3"></div>
+            <div class="projects__content-wrapper">
+              <h3 class="projects__card-title">Coming soon...</h3>
+              <div class="projects__card-divider"></div>
+              <p class="projects__card-description">
+                ?????????????????????????????
+              </p>
+            </div>
           </a>
         </div>
       </div>
